--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -1,8 +1,60 @@
+.hover {
+    transition: all 0.3s ease-out;
+}
+
 .hover:hover {
     background-color: var(--hoverColor) !important;
 }
 
-.hover:active,
 .hover:focus {
     outline: none !important;
+    animation-duration: 0.5s;
+    animation-name: shake;
+}
+
+@keyframes shake {
+    0% {
+        transform-origin: 0.5;
+        transform: rotate(0);
+    }
+    10% {
+        transform-origin: 0.5;
+        transform: rotate(-5deg);
+    }
+    20% {
+        transform-origin: 0.5;
+        transform: rotate(5deg);
+    }
+    30% {
+        transform-origin: 0.5;
+        transform: rotate(-5deg);
+    }
+    40% {
+        transform-origin: 0.5;
+        transform: rotate(5deg);
+    }
+    50% {
+        transform-origin: 0.5;
+        transform: rotate(-5deg);
+    }
+    60% {
+        transform-origin: 0.5;
+        transform: rotate(5deg);
+    }
+    70% {
+        transform-origin: 0.5;
+        transform: rotate(-5deg);
+    }
+    80% {
+        transform-origin: 0.5;
+        transform: rotate(5deg);
+    }
+    90% {
+        transform-origin: 0.5;
+        transform: rotate(-5deg);
+    }
+    1000% {
+        transform-origin: 0.5;
+        transform: rotate(0deg);
+    }
 }
