--- a/src/components/button/Button.module.css
+++ b/src/components/button/Button.module.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@500&display=swap');
 .hover {
     transition: all 0.3s ease-out;
 }
